<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/device_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:src="@drawable/ic_oil_temperature_black_48dp"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_name_bold"
                android:textSize="@dimen/note_size"/>

            <TextView
                android:id="@+id/saved_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_listview_name"
                android:textSize="@dimen/normal_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_address_bold"
                android:textSize="@dimen/note_size"/>

            <TextView
                android:id="@+id/saved_device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_listview_name"
                android:textSize="@dimen/normal_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_uuid_bold"
                android:textSize="@dimen/note_size"/>

            <TextView
                android:id="@+id/saved_service_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_listview_name"
                android:textSize="@dimen/normal_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/characteristic_uuid_bold"
                android:textSize="@dimen/note_size"/>

            <TextView
                android:id="@+id/saved_characteristic_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_listview_name"
                android:textSize="@dimen/normal_size"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>